feat: Implemented event category and activity modality
