# backend/CodigoActivo.Domain/Entities/EventCategory.cs
@@ -1,0 +1,10 @@
+namespace CodigoActivo.Domain.Entities;
+
+public class EventCategory
+{
+    public Guid EventId { get; set; }
+    public Event Event { get; set; } = null!;
+
+    public Guid EventCategoryTypeId { get; set; }
+    public EventCategoryType EventCategoryType { get; set; } = null!;
+}
